--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "npx vite",
     "build": "npx vite build",
     "preview": "npx vite preview"
+  
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -18,5 +19,6 @@
     "@vitejs/plugin-react": "^4.1.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
-  }
+  },
+  "vercel-build":"npm ci && npm run build"
 }
