--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "dev": "npx vite",
-    "build": "npx vite build",
-    "preview": "npx vite preview"
-  
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "deploy": "vite build && echo 'Monday5293.github.io/CharacterSheet' > dist/CNAME && gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -17,8 +17,9 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.1.0",
+    "gh-pages": "^6.3.0",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
   },
-  "vercel-build":"npm ci && npm run build"
+  "vercel-build": "npm ci && npm run build"
 }
