--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm ci && npm run build",
   "outputDirectory": "dist",
-  "env": {
-    "NODE_OPTIONS": "--max-old-space-size=3072"
-  }
+  "nodeVersion": "18.x"
 }
